<!-- res/layout/fragment_login.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    >

    <TextView
        android:id="@+id/mainLogintext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="monospace"
        android:text="Let's Connect again!"
        android:textColor="#8F4CBD"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:hint="@string/email"
        android:inputType="text"
        android:autofillHints="emailAddress"
        android:background="@drawable/edittext_background"
        android:elevation="6dp"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintTop_toBottomOf="@id/mainLogintext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/edittext_background"
        android:elevation="6dp"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#888888"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Keep me logged in"
        android:textColor="#5F3273"
        android:textSize="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent" />



    <Button
        android:id="@+id/btnLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/loginbtn"
        android:backgroundTint="@color/btnclr"
        app:layout_constraintTop_toBottomOf="@id/cbRememberMe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/signuptxt"
        android:textColor="#6D3A8E"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>